--- a/app/src/main/res/layout/community_item_list.xml
+++ b/app/src/main/res/layout/community_item_list.xml
@@ -23,28 +23,28 @@
                 android:layout_height="wrap_content"
                 android:background="#F8F8F8"
                 android:gravity="center"
-                android:orientation="vertical"
-                android:weightSum="5">
+                android:orientation="vertical">
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_weight="3"
+                    android:layout_height="wrap_content"
                     android:gravity="center"
                     android:orientation="horizontal">
 
 
-                    <RelativeLayout
+                    <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="@dimen/_5sdp"
-                        android:layout_marginEnd="@dimen/_5sdp">
+                        android:layout_marginEnd="@dimen/_5sdp"
+                        android:weightSum="1">
 
                         <LinearLayout
-                            android:layout_width="match_parent"
+                            android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_toLeftOf="@+id/ry1"
                             android:gravity="center"
+                            android:layout_weight="0.7"
                             android:orientation="vertical">
 
 
@@ -97,13 +97,33 @@
                                     android:textSize="@dimen/_12sdp" />
                             </LinearLayout>
 
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:orientation="horizontal">
+                                <com.vynkpay.custom.NormalTextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="Designation: "
+                                    android:textSize="@dimen/_10sdp" />
+
+                                <com.vynkpay.custom.NormalTextView
+                                    android:id="@+id/designationtext"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:textColor="@color/black"
+                                    android:textSize="@dimen/_10sdp" />
+                            </LinearLayout>
+
+
 
                         </LinearLayout>
 
                         <LinearLayout
                             android:id="@+id/ry1"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:layout_weight="0.3"
                             android:layout_alignParentRight="true"
                             android:gravity="center"
                             android:orientation="vertical">
@@ -134,7 +154,7 @@
 
                         </LinearLayout>
 
-                    </RelativeLayout>
+                    </LinearLayout>
 
                 </LinearLayout>
 
@@ -147,10 +167,9 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="0dp"
+                    android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/_5sdp"
                     android:layout_marginEnd="@dimen/_5sdp"
-                    android:layout_weight="2"
                     android:orientation="horizontal"
                     android:weightSum="3">
 
