--- a/app/src/main/res/layout/direct_ref_item_list.xml
+++ b/app/src/main/res/layout/direct_ref_item_list.xml
@@ -93,6 +93,27 @@
                                 android:textSize="@dimen/_12sdp" />
                         </LinearLayout>
 
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal">
+
+                            <com.vynkpay.custom.NormalTextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="Designation: "
+                                android:textSize="@dimen/_10sdp" />
+
+                            <com.vynkpay.custom.NormalTextView
+                                android:id="@+id/designationtext"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:textColor="@color/black"
+                                android:textSize="@dimen/_10sdp" />
+
+                        </LinearLayout>
+
+
 
                     </LinearLayout>
 
