--- a/app/src/main/res/layout/activity_choose_payment_b.xml
+++ b/app/src/main/res/layout/activity_choose_payment_b.xml
@@ -277,7 +277,7 @@
                                         <ImageView
                                             android:layout_width="@dimen/_30sdp"
                                             android:layout_height="@dimen/_30sdp"
-                                            android:src="@drawable/pnb" />
+                                            android:src="@drawable/rbl_banklogo" />
 
 
                                     </LinearLayout>
