--- a/app/src/main/res/layout/viewpager_package_item_layout.xml
+++ b/app/src/main/res/layout/viewpager_package_item_layout.xml
@@ -92,10 +92,10 @@
                 <com.vynkpay.custom.NormalTextView
                     android:layout_width="match_parent"
                     android:textColor="@color/black"
-
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_30sdp"
                     android:gravity="center"
+                    android:visibility="gone"
                     android:text="Points"
                     android:textSize="@dimen/_12sdp" />
 
@@ -105,6 +105,7 @@
                     android:layout_height="wrap_content"
                     android:gravity="center"
                     android:text="2135"
+                    android:visibility="gone"
                     android:textColor="@color/black"
                     android:textSize="@dimen/_16sdp" />
 
