--- a/app/src/main/res/layout/activity_affiliate.xml
+++ b/app/src/main/res/layout/activity_affiliate.xml
@@ -144,11 +144,12 @@
                             android:orientation="vertical"
                             android:id="@+id/linPackage">
 
-                            <LinearLayout
+                          <!--  <LinearLayout
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_marginTop="@dimen/_5sdp"
                                 android:id="@+id/linPackageOption"
+
                                 android:orientation="vertical">
                                 <com.vynkpay.custom.NormalTextView
                                     android:layout_width="wrap_content"
@@ -179,7 +180,8 @@
                                 </RadioGroup>
 
 
-                            </LinearLayout>
+                            </LinearLayout>-->
+
                             <FrameLayout
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content">
@@ -284,7 +286,6 @@
 
                         </androidx.cardview.widget.CardView>
 
-
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="@dimen/_32sdp"
@@ -303,6 +304,7 @@
                                 android:textColor="@color/buttonText" />
 
                         </LinearLayout>
+
                     </LinearLayout>
                 </LinearLayout>
             </ScrollView>
